Fix flickering hoverover for datamap. Add zooming ability.

--- a/app/assets/stylesheets/datamap_chart.scss
+++ b/app/assets/stylesheets/datamap_chart.scss
@@ -5,5 +5,8 @@
   .hoverinfo {
     color: $body_text_color;
   }
+  .datamaps-hoverover {
+    margin-left: 1em;
+  }
 }
 
